Fix roles and integrity